force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Body_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Body_Type__c</fullName>
    <description>The technology which the body content uses.</description>
    <inlineHelpText>The technology which the body content uses.</inlineHelpText>
    <label>Body Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lightning Aura Component</fullName>
            </value>
            <value>
                <fullName>Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>Visualforce Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>