force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Parameters__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parameters__c</fullName>
    <description>This field is manually populated. It is optional. A semicolon-separated set of key=value pairs passed as URL parameters to the content of this route.</description>
    <inlineHelpText>A semicolon-separated set of key=value pairs passed as URL parameters to the content of this route.</inlineHelpText>
    <label>Parameters</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>