force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Screen__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is manually populated. It is optional. This field looks up to the screen, which is typically used to determine what fields to display, and the view state (read only or editable) to display them in.</description>
    <inlineHelpText>Screens are a collection of  Screen Sections which reference field sets.  LLC_BI Routes commonly reference visualforce pages, thus do not require a screen.</inlineHelpText>
    <label>Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>